--- a/client-side-code/css/style.css
+++ b/client-side-code/css/style.css
@@ -22,23 +22,75 @@
 
 body {
   background-color: rgb(0, 200, 255);
+  font-family:"roboto",Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  color: black;
+  
 
 }
 /******************************************
 /* LAYOUT
 /*******************************************/
-header,footer {
-  height: 60px;
-  border: 1px solid black;
-  clear: both;
+header {
+  height: 10vh;
+  max-width: 60rem;
+  border: 1px solid orange;
+  margin: 1rem;
+  padding:0 1em;
 }
 
-ul {
+menu {
+  display: flex;
   list-style: none;
 }
-section{
-  height: 300px;
-  width: 100%;
-  border: 1px solid black;
+
+.litteList{
+  list-style: none;
+  margin:0;
+  padding:0;
+  color: white;
+}
+.navbar li{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-basis: 100%;
+  margin: 1rem;
+  padding:0 1em;
+  list-style: none;
+}
+
+.bigList {
+  list-style: none;
+  height:20vh;
+  font-weight: bold;
+
+}
+.tophalf{
+  height: 40vh;
+  max-width: 60rem;
+  border: 3px solid purple;
   float: left;
+  margin: 1rem;
+  padding:0 1em;
+}
+
+.wrapper {
+  background-color: rgb(230,159,0) ;
+  height: 40vh;
+  max-width:60rem;
+  border: 4px solid green;
+  clear: both;
+  margin: 1rem;
+  padding:0 1em;
+}
+
+footer {
+  height: 5vh;
+  border: 1px solid black;
+  max-width:60rem;
+  clear: both;
+  margin: 1rem;
+  padding:0 1em;
 }
