--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,12 +13,13 @@
         <h2>Input API Data Here</h2>
         <form action="/api" method="POST">
             <input type="text" placeholder="name" name="name">
-            <input type="text" placeholder="typeWine" name="typeWine">
+            <input type="text" placeholder="type" name="type">
             <textarea rows="5" cols="40" type="text" placeholder="features" name="features"></textarea>
-            <input type="text" placeholder="tanninsTaste" name="tanninsTaste">
+            <input type="text" placeholder="taste" name="taste">
             <input type="text" placeholder="image" name="image">
-            <textarea rows="5" cols="40" type="text" placeholder="foodPair" name="foodPair"></textarea>
-            <input type="text" placeholder="priceDollar" name="priceDollar">
+            <textarea rows="5" cols="40" type="text" placeholder="food" name="food"></textarea>
+            <input type="text" placeholder="pricer" name="price">
+            <input type="text" placeholder="aka" name="aka">
             <button type="submit">SUBMIT NEW</button>
             <button type="button" id="updateButton">UPDATE EXISTING</button>
         </form>    
