--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second Try Wine API</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/client-side-code/css/style.css">
 </head>
 <body>
 <section class="row">
@@ -36,6 +36,6 @@
         </ul>    
     </section>
 </section>
-<script type="text/javascript" src="main.js"></script>
+<script src='/client-side-code/js/main.js'></script>
 </body>
 </html>
