--- a/client-side-code/css/style.css
+++ b/client-side-code/css/style.css
@@ -70,7 +70,13 @@ p {
 img {
   width: 100%
 }
+img {
+  max-height: 500px;
+}
 
+input {
+  width: 400px;
+}
 /* Nav styling*/
 
 .navbar {
@@ -193,4 +199,9 @@ img {
   height:100%;
   grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));
 
+}
+
+.bottom {
+  width:auto;
+  height: 420px;
 }
